<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_haros_test</name>
  <version>0.0.1</version>
  <description>Test package for ament_haros</description>
  <maintainer email="v-krichenbauer7715@esol.co.jp">Max Krichenbauer</maintainer>
  <license>Apache License 2.0</license>
  <author>Max Krichenbauer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_haros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

